--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@portabletext/react": "^3.2.1",
     "@sanity/image-url": "^1.1.0",
     "cookie": "^1.0.2",
-    "next": "15.2.4",
+    "next": "^15.2.6",
     "next-sanity": "^9.10.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
